--- a/html/CONOCENOS.html
+++ b/html/CONOCENOS.html
@@ -13,7 +13,7 @@
     </h1>
 
     <h2>
-        Ubicados en el corazón de Villa Yacanto, <strong>ruta S228, frente al Monumento de la Madre.</strong>
+        Ubicados en el corazón de Villa Yacanto; <strong>ruta S228, frente al Monumento de la Madre.</strong>
     </h2>
     
 
