--- a/html/Iniciar Sesion.html
+++ b/html/Iniciar Sesion.html
@@ -20,5 +20,15 @@
         <p><a href="#">Ya tengo cuenta?</a></p>
 
     </section>
+    <footer class="foot-iniciar-sesion">
+        <a href="https://www.instagram.com/">Instagram
+
+        </a>
+        <a href="https://www.facebook.com/">Facebook
+
+        </a>
+        <a href="http://www.youtube.com">Youtube
+            
+        </a>
 </body>
 </html>
